bugfix-3:resolve incorrect number of tasks